fix(portal): chrome 101 update app-expansion-panel z-index was set to 1

--- a/src/app/pages/portal/portal.component.scss
+++ b/src/app/pages/portal/portal.component.scss
@@ -193,7 +193,7 @@ app-expansion-panel {
   @include mobile {
     @supports (-webkit-appearance: none) and (not (overflow: -webkit-marquee))
       and (not (-ms-ime-align: auto)) and (not (-moz-appearance: none)) {
-      z-index: 1;
+      z-index: 5;
     }
   }
 }
@@ -291,6 +291,10 @@ igo-geolocate-button {
   @include tablet {
     margin-bottom: 0px;
   }
+}
+
+igo-wake-lock-button {
+  margin-bottom: 85px;
 }
 
 igo-home-extent-button {
